plugins {
  id 'java'
  id 'war'
  id 'jacoco'
  id "org.sonarqube" version "7.3.1.8318"
}

group 'site.benepay'
version '1.0-SNAPSHOT'

sonar {
  properties {
    property "sonar.projectKey", "kb-pjt-22-1_its-me-backend"
    property "sonar.organization", "kb-pjt-22-1"
    property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
  }
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

repositories {
  mavenCentral()
}

ext {
  springVersion = '5.3.39'
  springSecurityVersion = '5.8.16'
  jacksonVersion = '2.18.2'
  junitVersion = '5.11.4'
  springDataRedisVersion = '2.7.18'
  jjwtVersion = '0.12.7'
  lombokVersion = '1.18.46'
}
tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

dependencies {
  // Spring
  implementation "org.springframework:spring-context:${springVersion}"
  implementation "org.springframework:spring-webmvc:${springVersion}"
  implementation "org.springframework:spring-jdbc:${springVersion}"
  implementation "org.springframework:spring-tx:${springVersion}"
  implementation "org.springframework:spring-aop:${springVersion}"
  implementation 'org.aspectj:aspectjweaver:1.9.22'

  // Spring Security
  implementation "org.springframework.security:spring-security-web:${springSecurityVersion}"
  implementation "org.springframework.security:spring-security-config:${springSecurityVersion}"

  // JWT
  implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
  runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
  runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

  // Servlet
  providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
  implementation 'javax.annotation:javax.annotation-api:1.3.2'

  // Lombok
  compileOnly "org.projectlombok:lombok:${lombokVersion}"
  annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

  // JSON
  implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
  implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"

  // Validation
  implementation 'javax.validation:validation-api:2.0.1.Final'
  implementation 'org.hibernate.validator:hibernate-validator:6.2.5.Final'
  implementation 'org.glassfish:javax.el:3.0.1-b12'

  // MyBatis
  implementation 'org.mybatis:mybatis:3.5.19'
  implementation 'org.mybatis:mybatis-spring:2.1.2'

  // Database
  implementation 'com.zaxxer:HikariCP:5.1.0'
  runtimeOnly 'com.mysql:mysql-connector-j:8.4.0'

  // Logging
  implementation 'org.slf4j:slf4j-api:2.0.16'
  runtimeOnly 'ch.qos.logback:logback-classic:1.5.16'

  // Test
  testImplementation platform("org.junit:junit-bom:${junitVersion}")
  testImplementation 'org.junit.jupiter:junit-jupiter'
  testImplementation 'org.mockito:mockito-junit-jupiter:5.15.2'
  testImplementation 'org.assertj:assertj-core:3.27.3'
  testImplementation "org.springframework:spring-test:${springVersion}"
  testImplementation 'org.hamcrest:hamcrest:2.2'
  testImplementation 'com.jayway.jsonpath:json-path:2.9.0'

  // Redis
  implementation "org.springframework.data:spring-data-redis:${springDataRedisVersion}"
  implementation 'io.lettuce:lettuce-core:6.2.7.RELEASE'
}

test {
  useJUnitPlatform()
  finalizedBy jacocoTestReport
}

jacocoTestReport {
  dependsOn test
  reports {
    xml.required = true
    html.required = true
  }
}